# catyolo_ai_backend

./: .env.example  main.py  pyproject.toml
database/: sqlite.py
dependencies/: auth.py
detection_loop/: detector.py
models/: action.py  api_key.py  scene.py
pipelines/: scene_pipeline.py
routes/: action.py  api_key.py  frame.py  log.py  scene.py
scripts/: create_api_key.py
services/: action_service.py  api_key_service.py  api_key_validation_service.py  log_service.py  scene_service.py
